<resources>
    <string name="app_name">Quiz3</string>
    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="register">Register</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forgot_password">forgot password?</string>
    <string name="fullname">Fullname</string>
    <string name="username">Username</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="dont_have_an_account">Dont have an Account?</string>
    <string name="reset_password">Reset Password</string>
    <string name="koneksi_error">Koneksi Error.</string>
</resources>